# phenopacket-builder

./: .gitignore  Cargo.toml  README.md
src/: builders.rs  lib.rs
src/v2/: mod.rs  phenopackets.rs
src/v2/core/: base.rs  individual.rs  meta_data.rs  mod.rs  phenotypic_feature.rs
tests/: use_cases.rs
