[package]
name = "phenopacket-builder"
version = "0.1.0"
description = "Streamline programmatic assembly of Phenopacket Schema building blocks"
keywords = ["phenopackets", "phenotype", "ontology", "bioinformatics", "build"]
edition = "2021"

homepage = "https://github.com/P2GX/phenopacket-builder"
repository = "https://github.com/P2GX/phenopacket-builder"
readme = "README.md"
license-file = "LICENSE"

authors = ["Daniel Danis <daniel.gordon.danis@protonmail.com>"]

[dependencies]
phenopackets = "0.2.2-post2"
prost-types = "0.14.1"
